kubernetes/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdf-docs-deployment
  labels:
    app: nginx-sdf-docs
    facility: scs
    space: sdf
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-sdf-docs
      facility: scs
      space: sdf
  template:
    metadata:
      labels:
        app: nginx-sdf-docs
        facility: scs
        space: sdf
    spec:
#        env:
#        - name: http_proxy
#          value: http://squid.slac.stanford.edu:3128
#        - name: https_proxy
#          value: http://squid.slac.stanford.edu:3128
#        - name: no_proxy
#          value: .slac.stanford.edu
#        - name: SLAC_SDF_DOCS_UPDATE_INTERVAL
#          value: "300"
      volumes:
        - name: content
          emptyDir: {}
#        - name: config-nginx-default
#          configMap:
#            name: etc-nginx-confd-default-conf
#            items:
#            - key: etc/nginx/conf.d/default.conf
#              path: etc/nginx/conf.d/default.conf
#        - name: config-nginx-mime
#          configMap:
#            name: etc-nginx-mime-types
#            items:
#            - key: etc/nginx/mime.types
#              path: etc/nginx/mime.types
#        - name: config-nginx-nginx
#          configMap:
#            name: etc-nginx-nginx-conf
#            items:
#            - key: etc/nginx/nginx.conf
#              path: etc/nginx/nginx.conf
#        - name: cache
#          emptyDir: {}
#        - name: run
#          emptyDir: {}

      containers:
        # --- Note: see git-sync demo at https://github.com/kubernetes/git-sync/blob/master/demo/deployment.yaml#L18
        # This container pulls a git repo into the "content" volume.  If this
        # were a "real" app it would probably have livenessProbe and resources,
        # and maybe a secret to get credentials for your git server.
        - name: git-sync
          image: registry.k8s.io/git-sync/git-sync:v4.2.3
          args:
            - --repo=https://github.com/slaclab/sdf-docs
            - --root=/git
            - --period=60s
            - --link=head
            - --max-failures=1000000000
            - -v=2
          volumeMounts:
            - name: content
              mountPath: /git
        - name: nginx
          image: nginx:1.14.2
          #env:
          #- name: NGINX_PORT
          #  value: "8080"           
          ports:
          - containerPort: 80
          volumeMounts:
            - name: content
              mountPath: /git
              readOnly: true
#            - name: config-nginx-default
#              mountPath: /etc/nginx/conf.d/default.conf
#            - name: config-nginx-mime
#              mountPath: /etc/nginx/mime.types
#            - name: config-nginx-nginx
#              mountPath: /etc/nginx/nginx.conf
