kubernetes/overlays/dev/sdf-docs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdf-docs-deployment
  labels:
    app: nginx
    facility: scs
    space: sdf
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      facility: scs
      space: sdf
