kubernetes/overlays/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdf-docs-svc
  labels:
    app: nginx-sdf-docs
    facility: scs
    space: sdf
spec:
  selector:
    matchLabels:
      app: nginx-sdf-docs
      facility: scs
      space: sdf
  ports:
    - name: http
      protocol: TCP
      port: 80
    - name: https
      protocol: TCP
      port: 443
