kubernetes/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sdf-docs-unauth
spec:
  rules:
  - host: s3df-dev.slac.stanford.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sdf-docs-svc
            port:
              number: 80
